--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                 <div class="container px-0">
                     <nav class="navbar navbar-light navbar-expand-xl">
                         <a href="index.html" class="navbar-brand mt-3">
-                            <p class="text-primary display-6 mb-2" style="line-height: 0;">Newsers</p>
-                            <small class="text-body fw-normal" style="letter-spacing: 12px;">Nespaper</small>
+                            <p class="text-primary display-6 mb-2" style="line-height: 0;">永續海洋</p>
+                            <small class="text-body fw-normal" style="letter-spacing: 0px;">Ocean sustainability</small>
                         </a>
                         <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                             <span class="fa fa-bars text-primary"></span>
@@ -155,12 +155,13 @@
                                 </div>
                             </div>
                             <div class="col-8">
+                              
                                 <div class="features-content d-flex flex-column">
-                                    <p class="text-uppercase mb-2">Sports</p>
+                                    <p class="text-uppercase mb-2">Member</p>
                                     <a href="#" class="h6">
-                                        Get the best speak market, news.
+                                        繆宜君
                                     </a>
-                                    <small class="text-body d-block"><i class="fas fa-calendar-alt me-1"></i> December 9, 2024</small>
+                                    <small class="text-body d-block"><i class="fas fa-calendar-alt me-1"></i> June 7, 2024</small>
                                 </div>
                             </div>
                         </div>
@@ -177,9 +178,9 @@
                             </div>
                             <div class="col-8">
                                 <div class="features-content d-flex flex-column">
-                                    <p class="text-uppercase mb-2">Technology</p>
+                                    <p class="text-uppercase mb-2">Member</p>
                                     <a href="#" class="h6">
-                                        Get the best speak market, news.
+                                       王惟賢
                                     </a>
                                     <small class="text-body d-block"><i class="fas fa-calendar-alt me-1"></i> December 9, 2024</small>
                                 </div>
